Updated project with working application and tests